--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,13 @@ mypy = "^1.1.1"
 pylint = "^2.17.0"
 flake8 = "^6.0.0"
 
+
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.1.1"
+flake8 = "^6.0.0"
+pytest = "^7.2.2"
+pylint = "^2.17.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
